# KoolIntelligence

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: buildAndTest.yml  check-branch-name.yml  clang-format-test.yml
UI/: CMakeLists.txt
UI/src/: CMakeLists.txt
docs/: BuildInstructions.md  CIIntegration.md  codingGuidelines.md
src/common/: CMakeLists.txt  logging.cpp  logging.hpp
src/file_search/: CMakeLists.txt  file_search.cpp  file_search.hpp
src/model_backend/: CMakeLists.txt  create_tts_binary.sh  create_whisper_binaries.sh  download-ggml-model.sh  download_voice_out_model.sh  main.cpp  model_api  model_api.cpp  model_api.hpp  ollama_install.sh  transcribe_service.cpp  transcribe_service.hpp  tts_service.cpp  tts_service.hpp
src/screenshot/: CMakeLists.txt  KwinScreenshot.cpp  KwinScreenshot.hpp
src/ui/: CMakeLists.txt  app.cpp  app.hpp  backend.cpp  backend.hpp  chatHistoryModel.cpp  chatHistoryModel.hpp  main.cpp  org.kde.koolintelligence.desktop  ui_backend.cpp  userPromptField.cpp  userPromptField.hpp
src/ui/qml/: CMakeLists.txt  ChatHistory.qml  Main.qml  SettingsPage.qml  TerminalLayout.qml  TerminalPanel.qml
src/ui/terminal/: CMakeLists.txt  Note.md  kiofuse_interface.cpp  kiofuse_interface.h  panel.cpp  terminalpanel.cpp  terminalpanel.hpp  terminaltabmodel.cpp
src/ui/terminal/lib/: .clang-format  Screen.cpp
